# UnitOS

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  run_tests.sh
.cargo/: config.toml
.github/workflows/: run_tests.sh  rust.yml
src/: lib.rs  main.rs  test_trait.rs  tests.rs
src/gdt/: mod.rs
src/handler/: interrupt_table.rs  keyboard.rs  mod.rs
src/pic/: mod.rs
src/serial/: macros.rs  mod.rs
src/vga/: char.rs  color.rs  macros.rs  mod.rs  test.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs  vga.rs  vga_test.rs
