[package]
name = "rusty_os"
version = "0.1.0"
authors = ["FabioToh <fabiocanavarrotoh@gmail.com>"]
edition = "2024"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 1
test-timeout = 300 # It is in seconds, testcases Combined wont last more than 5 minute

# 0x10 << 1 | 1
# 0x0F dec = 15
# so 0x10 dec = 16
# 0001 0000 << 1 |
# 0010 0001 is 32 + 1 = 33



